--- a/package.json
+++ b/package.json
@@ -4,9 +4,24 @@
     "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css --minify"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy": "^1.0.2",
     "alpinejs": "^3.7.0",
     "html-minifier": "^4.0.0",
-    "tailwindcss": "^3.0.0"
-  }
+    "tailwindcss": "^3.3.3"
+  },
+  "name": "vg",
+  "description": "A starter repository showing how to build a website with the [Eleventy](https://www.11ty.dev), [Tailwind CSS](https://tailwindcss.com), and [Alpine.js](https://alpinejs.dev).",
+  "version": "1.0.0",
+  "main": ".eleventy.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jaibles/vg.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jaibles/vg/issues"
+  },
+  "homepage": "https://github.com/Jaibles/vg#readme"
 }
